<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.imot.endear.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_friends_list"
        android:name="com.imot.endear.ui.friends_list.FriendsListFragment"
        android:label="@string/friend_list"
        tools:layout="@layout/fragment_friendslist" />

    <fragment
        android:id="@+id/nav_find_people"
        android:name="com.imot.endear.ui.find_people.FindPeopleFragment"
        android:label="@string/find_people"
        tools:layout="@layout/fragment_findpeople" />


    <fragment
        android:id="@+id/nav_friend_request"
        android:name="com.imot.endear.ui.friend_request.FriendRequestFragment"
        android:label="@string/Notifications"
        tools:layout="@layout/fragment_friendrequest" />


    <fragment
        android:id="@+id/nav_settings"
        android:name="com.imot.endear.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"/>



    <fragment
        android:id="@+id/nav_sign_out"
        android:name="com.imot.endear.ui.sign_out_fragment.SignOutFragment"
        android:label="@string/Sign_Out"
        tools:layout="@layout/fragment_sign_out" />

    <fragment
        android:id="@+id/nav_game"
        android:name="com.imot.endear.ui.endear.EndearFragment"
        android:label="@string/endear"
        tools:layout="@layout/fragment_endear" />
</navigation>