<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_vector"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_find_people"
            android:icon="@drawable/ic_person_search"
            android:title="@string/Look_around" />
        <item
            android:id="@+id/nav_friend_request"
            android:icon="@drawable/ic_person_add"
            android:title="@string/Notifications" />

    </group>

    <item android:title="@string/account"/>

    <item
        android:id="@+id/list_friend"
        android:icon="@drawable/ic_playlist_check"
        android:title="@string/friend_list" />

    <item
        android:id="@+id/nav_sign_out"
        android:icon="@drawable/ic_sign_out"
        android:title="@string/Sign_Out" />
</menu>