<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LaunchActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:gravity="center_horizontal"
        android:src="@drawable/ic_contact_dev"
        android:includeFontPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:includeFontPadding="false"
        android:shadowColor="@color/light_blue_600"
        android:text="@string/powered"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/aeon" />

    <TextView
        android:id="@+id/aeon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"
        android:includeFontPadding="false"
        android:shadowColor="@color/light_blue_A200"
        android:text="@string/aeon_corporation"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>