<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main_layout"
    android:visibility="gone"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:orientation="vertical"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/google_icon"
            android:contentDescription="@string/Sign_In_with_Google" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:includeFontPadding="false"
            android:paddingTop="20sp"
            android:shadowColor="#0E0E0E"
            android:text="@string/Sign_In"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="45sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:shadowColor="#0E0E0E"
            android:text="@string/Sign_In_explanation"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp" />

        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="100dp"/>

        <Button
            android:id="@+id/google_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rond"
            android:drawableStart="@drawable/google_s"
            android:elevation="8dp"
            android:text="@string/Sign_In_with_Google"
            android:textColor="#fff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:paddingLeft="100dp"
            android:paddingRight="100dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:src="@drawable/facebook" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:src="@drawable/google_plus" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:src="@drawable/twitter" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:shadowColor="#0E0E0E"
            android:text="@string/aeon_corporation"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp" />



    </LinearLayout>

</ScrollView>

