<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ui.endear.EndearFragment"
    android:background="@drawable/background_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/endearLayout">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.endear.EndearFragment">


    <TextView
        android:id="@+id/tv_playerOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player_One"
        android:textStyle="bold"
        android:textColor="@color/light_blue_A400"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="87dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_playerOneScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textStyle="bold"
        android:textColor="@color/fui_bgPhone"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_playerOne"
        app:layout_constraintLeft_toLeftOf="@+id/tv_playerOne"
        android:layout_marginStart="35dp"
        />

    <TextView
        android:id="@+id/tv_playerTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player_Two"
        android:textStyle="bold"
        android:textColor="@color/fui_bgAnonymous"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_playerOne"
        />

    <TextView
        android:id="@+id/tv_playerTwoScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textStyle="bold"
        android:textColor="@color/fui_bgPhone"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_playerTwo"
        app:layout_constraintRight_toRightOf="@+id/tv_playerTwo"
        android:layout_marginEnd="35dp"
        />

    <TextView
        android:id="@+id/tv_playerStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_playerOneScore"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/btn_0"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:textStyle="bold"
        android:backgroundTint="@color/secondary_text"
        android:textSize="60sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_playerStatus"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="7dp"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:textStyle="bold"
        android:backgroundTint="@color/secondary_text"
        android:textSize="60sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@+id/btn_0"
        app:layout_constraintLeft_toRightOf="@+id/btn_0"
        />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:textStyle="bold"
        android:backgroundTint="@color/secondary_text"
        android:textSize="60sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@+id/btn_1"
        app:layout_constraintLeft_toRightOf="@+id/btn_1"
        />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:textStyle="bold"
        android:backgroundTint="@color/secondary_text"
        android:textSize="60sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/btn_0"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="7dp"
        />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:textStyle="bold"
        android:backgroundTint="@color/secondary_text"
        android:textSize="60sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@+id/btn_3"
        app:layout_constraintLeft_toRightOf="@+id/btn_3"
        />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:textStyle="bold"
        android:backgroundTint="@color/secondary_text"
        android:textSize="60sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@+id/btn_4"
        app:layout_constraintLeft_toRightOf="@+id/btn_4"
        />


    <Button
        android:id="@+id/btn_6"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:textStyle="bold"
        android:backgroundTint="@color/secondary_text"
        android:textSize="60sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/btn_4"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="7dp"
        />

    <Button
        android:id="@+id/btn_7"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:textStyle="bold"
        android:backgroundTint="@color/secondary_text"
        android:textSize="60sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@+id/btn_6"
        app:layout_constraintLeft_toRightOf="@+id/btn_6"
        />

    <Button
        android:id="@+id/btn_8"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:textStyle="bold"
        android:backgroundTint="@color/secondary_text"
        android:textSize="60sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@+id/btn_7"
        app:layout_constraintLeft_toRightOf="@+id/btn_7"
        />

    <Button
        android:id="@+id/btn_ResetGame"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/accent"
        android:shadowRadius="@integer/material_motion_duration_long_2"
        android:text="@string/ResetGame"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_6" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>